--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,3 @@
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* general styling */
 * {
     box-sizing: border-box;
@@ -23,10 +9,16 @@
     height: 100%;
     margin: 0;
   }
-  
   body {
     align-items: center;
-    background-color: #ffd54f;
+    background-image: url('./resources/img/win-11-bg-dark.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    /* filter: blur(8px);
+    -webkit-filter: blur(8px); */
+
+    background-color: #3c3c3c;
     display: flex;
     font-family: -apple-system, 
       BlinkMacSystemFont, 
@@ -40,7 +32,7 @@
   }
   
   .container {
-    color: #333;
+    color: rgba(242, 222, 74, 0.741);
     margin: 0 auto;
     text-align: center;
   }
@@ -49,6 +41,9 @@
     font-weight: normal;
     letter-spacing: .125rem;
     text-transform: uppercase;
+  }
+  a:link {
+    color: rgb(60, 179, 157);
   }
   
   li {
