--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@
   .container {
     margin: 0 auto;
     text-align: center;
+    background-color: rgba(3, 36, 12,0.8);
     
     /* filter: blur(8px);
     -webkit-filter: blur(8px); */
