--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@
   }
   
   .container {
+    color: rgba(242, 222, 74, 0.741);
     margin: 0 auto;
     text-align: center;
     background-color: rgba(3, 36, 12,0.8);
