--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
   }
   body {
     align-items: center;
-    background-image: url('./resources/img/win-11-bg-dark.jpg');
+    background-image: url('./resources/img/Pixel-6-Launch.jfif');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
