--- a/styles.css
+++ b/styles.css
@@ -30,10 +30,12 @@
   }
   
   .container {
-    color: rgba(242, 222, 74, 0.741);
+    color: rgba(217, 242, 74, 0.828);
     margin: 0 auto;
     text-align: center;
     background-color: rgba(3, 36, 12,0.8);
+    border-radius: 2em;
+    padding: 2em;
     
     /* filter: blur(8px);
     -webkit-filter: blur(8px); */
@@ -73,6 +75,58 @@
     padding: 0 .5rem;
   }
   
+  .github-div {
+    margin: 2em auto;
+    margin-top: 4em;
+    width: fit-content;
+    display: flex;
+    justify-content: center;
+    padding-right: 1em;
+    padding-left: 1em;
+    border: 1px solid black;
+    border-radius: 0.5em;
+  }
+  @keyframes hideshow {
+    0% {
+      opacity: 0;
+    }
+    40% {
+      opacity: 1;
+    }
+    60% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+    }
+  }
+
+  @keyframes spin {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+  }
+
+  .github-div:hover > a > svg {
+    animation: spin 3s linear infinite;
+    width: 1.5em;
+    height: 1.5em;
+    margin-bottom: 0.1em;
+  }
+
+  .github-div > a > svg {
+    animation: hideshow 3s infinite;
+    width: 1.5em;
+    height: 1.5em;
+    margin-bottom: 0.1em;
+  }
+  .github-div > a > p {
+    color: aliceblue;
+  }
+
   @media all and (max-width: 768px) {
     h1 {
       font-size: 1.5rem;
